%% ============================================================================
%% "여기몰까" 데이터베이스 ERD - 발표용 간략 버전
%% ============================================================================
%% 핵심 기능만 포함한 간소화된 ERD
%% ============================================================================

erDiagram
    %% ========= 핵심 엔티티 =========
    
    users {
        bigint id PK
        string username "unique"
        string email "unique"
        string phone_number "unique"
        string status "active, unregistered, deleted, anonymous"
        timestamp created_at
    }
    
    shops {
        bigint id PK
        string url "unique, 정규화된 URL"
        string name
        bigint parent_shop_id FK "자기 참조: 부모 쇼핑몰"
        int search_count
        timestamp created_at
        timestamp updated_at
    }
    
    shop_reports {
        bigint id PK
        bigint shop_id FK
        bigint user_id FK
        string reporter_name
        string categories "JSON 배열"
        string description
        string evidence_files "JSON 배열"
        bool evidence_verified
        int verification_score
        timestamp created_at
    }
    
    shop_ratings {
        bigint id PK
        bigint shop_id FK
        bigint user_id FK
        int rating "1-5점"
        string comment
        timestamp created_at
    }
    
    ai_analysis_cache_entries {
        bigint id PK
        bigint shop_id FK
        string analysis_type "RISK_ANALYSIS, BUSINESS_ANALYSIS 등"
        string analysis_result "JSON 형태"
        timestamp analysis_date
        timestamp expires_at
    }
    
    business_registrations {
        bigint id PK
        bigint shop_id FK
        string business_number
        string business_status "ACTIVE, SUSPENDED, CLOSED"
        string representative_name
        string business_address
        string verification_source "API, MANUAL, CRAWLING"
        timestamp last_verified
    }
    
    %% ========= 핵심 관계 =========
    
    users ||--o{ shop_reports : "제보"
    users ||--o{ shop_ratings : "평점"
    shops ||--o{ shops : "부모-자식"
    shops ||--o{ shop_reports : "피해사례"
    shops ||--o{ shop_ratings : "리뷰"
    shops ||--o{ ai_analysis_cache_entries : "AI분석"
    shops ||--o{ business_registrations : "사업자정보"

